--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task1",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:5001",
+  "proxy": "https://dummy.restapiexample.com/api/v1/employees",
   "type": "module",
   "scripts": {
     "dev": "vite",
